<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/title"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_marginTop="10dip"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/vedioSpearChb"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/darker_gray"
            android:checked="true"
            android:text="@string/vedioSpeak"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <View
            android:layout_width="5dip"
            android:layout_height="match_parent" />

        <CheckBox
            android:id="@+id/vedioReceiveChb"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/darker_gray"
            android:checked="true"
            android:text="@string/vedioReceive"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <View
            android:layout_width="5dip"
            android:layout_height="match_parent" />

        <CheckBox
            android:id="@+id/vibrateChb"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/darker_gray"
            android:checked="true"
            android:text="@string/Virbate"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_marginTop="5dip"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/micReceiverChb"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/darker_gray"
            android:checked="true"
            android:text="@string/micReceive"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <View
            android:layout_width="5dip"
            android:layout_height="match_parent" />

        <CheckBox
            android:id="@+id/backCameraChb"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/darker_gray"
            android:checked="true"
            android:text="@string/backCamera"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <View
            android:layout_width="5dip"
            android:layout_height="match_parent" />

        <CheckBox
            android:id="@+id/forntCameraChb"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/darker_gray"
            android:checked="true"
            android:text="@string/frontCamera"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/testTime"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/hourEdt"
            android:layout_width="40dip"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:inputType="number"
            android:text="@string/defaultHours" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hour"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/minEdt"
            android:layout_width="40dip"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:inputType="number"
            android:text="@string/defaultMins" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/min"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/testResult"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vsResultTxt"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vrResultTxt"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vibrateResultTxt"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mrResultTxt"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/backCameraResultTxt"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/frontCameraResultTxt"
        android:textSize="20sp" />
    
    <Button android:id="@+id/start"
        android:text="@string/start"
        android:layout_marginTop="30dip"
        android:layout_height="60dip"
        android:textSize="30sp"
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:layout_gravity="bottom"/>

</LinearLayout>